--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "overrides": {
+    "babel-plugin-macros": "^3.0.1"
+  },
   "dependencies": {
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
